--- a/app/src/main/res/layout/list_row_volumes.xml
+++ b/app/src/main/res/layout/list_row_volumes.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -25,9 +26,10 @@
                 android:layout_height="0dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="Test Volume"
+                android:text="@string/empty_string"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="NestedWeights" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,7 +46,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_weight="2"
                     android:gravity="center"
-                    android:text="volume 22,41 cm³"
+                    android:text="@string/empty_string"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -61,7 +63,7 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginBottom="5dp"
                         android:gravity="center"
-                        android:text="base 20,3 cm²"
+                        android:text="@string/empty_string"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -85,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:background="@null"
-                android:text="RENAME"
+                android:text="@string/rename"
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold" />
 
@@ -95,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@null"
-                android:text="REMOVE"
+                android:text="@string/remove"
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold" />
 
@@ -104,7 +106,6 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider" />
