--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -6,12 +6,14 @@
     tools:context=".activities.AboutUsActivity">
 
     <TextView
+        android:id="@+id/about_us_tv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
+        android:lineSpacingMultiplier="2"
         android:text="@string/aboutUs"
         android:paddingBottom="30dp"
-        android:isScrollContainer="true"/>
+        android:scrollbars="none"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/code"
