--- a/app/src/main/res/layout/activity_add_angle.xml
+++ b/app/src/main/res/layout/activity_add_angle.xml
@@ -12,7 +12,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ADD ANGLE"
+        android:text="@string/add_angle"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="22sp"
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:textSize="18sp"
-                android:text="Name"
+                android:text="@string/name"
                 android:layout_weight="1"/>
 
             <EditText
@@ -59,7 +59,9 @@
                 android:labelFor="@id/name_label"
                 android:layout_weight="2"
                 android:textAlignment="center"
-                android:maxWidth="160dp"/>
+                android:maxWidth="160dp"
+                tools:ignore="LabelFor"
+                android:importantForAutofill="no" />
 
         </TableRow>
 
@@ -75,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:textSize="18sp"
-                android:text="Point A"
+                android:text="@string/point_a"
                 android:layout_weight="1"/>
 
             <Spinner
@@ -100,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:textSize="18sp"
-                android:text="Point B"
+                android:text="@string/point_b"
                 android:layout_weight="1"/>
 
             <Spinner
@@ -125,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:textSize="18sp"
-                android:text="Point C"
+                android:text="@string/point_c"
                 android:layout_weight="1"/>
 
             <Spinner
