--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -11,7 +12,8 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/measure_logo"
         android:layout_weight="1"
-        android:padding="50dp"/>
+        android:padding="50dp"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:layout_width="match_parent"
@@ -22,13 +24,13 @@
         android:textSize="22sp"
         android:textAlignment="center"
         android:lineSpacingMultiplier="1.5"
-        android:text="Measure allows you to obtain a variety of magnitudes in just a few clicks. Try it out!"/>
+        android:text="@string/summary_main"/>
 
     <Button
-        android:id="@+id/getstartedbt"
+        android:id="@+id/get_started_bt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Get Started!"
+        android:text="@string/get_started"
         android:gravity="center"
         android:layout_gravity="center"
         android:textSize="16sp"
