--- a/app/src/main/res/layout/activity_sensor_test.xml
+++ b/app/src/main/res/layout/activity_sensor_test.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -7,11 +8,10 @@
     android:padding="12dp">
 
     <TextView
-        android:id="@+id/tbTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Orientation Sensors"
+        android:text="@string/orientation_sensors"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
     <TableLayout
@@ -27,14 +27,15 @@
             android:layout_weight="1">
 
             <TextView
-                android:text="PITCH"
+                android:text="@string/pitch"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textSize="24sp"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:paddingStart="20dp"/>
+                android:paddingStart="20dp"
+                tools:ignore="RtlSymmetry" />
 
             <RelativeLayout
                 android:layout_weight="1">
@@ -72,14 +73,13 @@
                     android:layout_centerInParent="true"
                     android:textStyle="bold"
                     android:textSize="18sp"
-                    android:text="-180º"/>
+                    android:text="@string/empty_string"/>
 
             </RelativeLayout>
 
         </TableRow>
 
         <View
-            android:id="@+id/divider5"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
@@ -90,14 +90,15 @@
             android:layout_weight="1">
 
             <TextView
-                android:text="ROLL"
+                android:text="@string/roll"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textSize="24sp"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:paddingStart="20dp"/>
+                android:paddingStart="20dp"
+                tools:ignore="RtlSymmetry" />
 
             <RelativeLayout
                 android:layout_weight="1">
@@ -135,14 +136,13 @@
                     android:layout_centerInParent="true"
                     android:textStyle="bold"
                     android:textSize="18sp"
-                    android:text="-180º"/>
+                    android:text="@string/empty_string"/>
 
             </RelativeLayout>
 
         </TableRow>
 
         <View
-            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
@@ -157,10 +157,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingStart="30dp"
-                android:text="AZIMUTH"
+                android:text="@string/azimuth"
                 android:textAlignment="center"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="RtlSymmetry" />
 
             <RelativeLayout
                 android:layout_weight="1">
@@ -199,7 +200,7 @@
                     android:layout_centerInParent="true"
                     android:textStyle="bold"
                     android:textSize="18sp"
-                    android:text="-180º"/>
+                    android:text="@string/empty_string"/>
 
             </RelativeLayout>
 
