--- a/app/src/main/res/layout/dialog_rename.xml
+++ b/app/src/main/res/layout/dialog_rename.xml
@@ -9,9 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:hint="Name"
+        android:hint="@string/name"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:inputType="textShortMessage"/>
+        android:inputType="textShortMessage"
+        android:importantForAutofill="no" />
 
 </LinearLayout>
