--- a/app/src/main/res/layout/fragment_tutorial_introduction.xml
+++ b/app/src/main/res/layout/fragment_tutorial_introduction.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.tutorial.PlaceholderFragment"
@@ -15,40 +14,23 @@
         android:textSize="16sp"
         android:lineSpacingMultiplier="1.5"
         android:singleLine="false"
-        android:text="With measure, you can easily calculate distances, angles, areas and volumes
-around you. \nTo do so, you will simply have to aim at the points which form them using the
-camera and following the steps on the next slides. \nOnce you have obtained all the necessary
-points you can get the desired magnitudes."/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_margin="20sp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:layout_gravity="center"
-            android:text="Example video"
-            android:layout_marginEnd="10dp"/>
-
-        <ImageButton
-            android:id="@+id/introduction_video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:contentDescription="Example Video"
-            android:src="@drawable/ic_videocam" />
-
-    </LinearLayout>
+        android:text="@string/tutorial_intro_1"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
         android:textSize="16sp"
-        android:text="Swipe to learn how to use the app!"/>
+        android:text="@string/tutorial_intro_2"/>
+
+    <Button
+        android:id="@+id/introduction_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="20sp"
+        android:textAlignment="center"
+        android:text="@string/example_video"
+        android:drawableStart="@drawable/ic_videocam"/>
 
 </LinearLayout>
