--- a/app/src/main/res/layout/fragment_tutorial_points.xml
+++ b/app/src/main/res/layout/fragment_tutorial_points.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.tutorial.PlaceholderFragment"
@@ -16,11 +15,6 @@
         android:textSize="16sp"
         android:lineSpacingMultiplier="1.5"
         android:singleLine="false"
-        android:text="To measure a point, click the 'Add' button on the top-right corner and select
-an option the according type regarding if the desired point is on the ground (Based Point) or not
-(Non-based point). \nTo mark a point, click the button-middle button. Remember that if the desired
-point is not on the ground, you will have to aim first at its 'Base Point' (explained in the previous slide).
-\nYou can cancel a point measurement by clicking on the bottom-left corner button. \nYou can finish
-measuring points and get to the results by clicking on the bottom-right corner button."/>
+        android:text="@string/tutorial_points"/>
 
 </LinearLayout>
