--- a/app/src/main/res/layout/list_row_areas.xml
+++ b/app/src/main/res/layout/list_row_areas.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -28,9 +29,10 @@
                 android:layout_height="0dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="Test Area"
+                android:text="@string/empty_string"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="NestedWeights" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -50,7 +52,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:gravity="start"
-                    android:text="22,41 cm²"
+                    android:text="@string/empty_string"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -72,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:background="@null"
-                android:text="RENAME"
+                android:text="@string/rename"
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold" />
 
@@ -82,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@null"
-                android:text="REMOVE"
+                android:text="@string/remove"
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold" />
 
@@ -91,7 +93,6 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider" />
