--- a/app/src/main/res/menu/tutorial.xml
+++ b/app/src/main/res/menu/tutorial.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/skip"
         android:orderInCategory="100"
-        android:title="Skip"
+        android:title="@string/skip"
         app:showAsAction="ifRoom" />
 </menu>
