Small UI Improvements
Justified TextViews
Modified AboutUsActivity

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,25 +5,39 @@
     android:layout_height="match_parent"
     tools:context=".activities.AboutUsActivity">
 
-    <TextView
-        android:id="@+id/about_us_tv"
+    <ScrollView
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        android:lineSpacingMultiplier="2"
-        android:text="@string/aboutUs"
-        android:paddingBottom="30dp"
-        android:scrollbars="none"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/code"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_code_white">
+        android:scrollbars="vertical"
+        android:fillViewport="true"
+        android:layout_alignBottom="@id/code"
+        android:paddingBottom="30dp">
 
-    </android.support.design.widget.FloatingActionButton>
+        <TextView
+            android:id="@+id/about_us_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:lineSpacingMultiplier="1.5"
+            android:justificationMode="inter_word"
+            android:text="@string/aboutUs"
+            android:scrollbars="none"
+            tools:targetApi="o" />
+    </ScrollView>
+
+
+
+    <Button
+        android:id="@+id/code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/white"
+        android:textColor="@color/colorAccent"
+        android:text="@string/source_code"
+        android:layout_alignParentBottom="true"
+        android:drawableTop="@drawable/ic_code_accent">
+
+    </Button>
 
 </RelativeLayout>
