--- a/app/src/main/res/layout/fragment_tutorial_height.xml
+++ b/app/src/main/res/layout/fragment_tutorial_height.xml
@@ -14,8 +14,10 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:lineSpacingMultiplier="1.5"
+        android:justificationMode="inter_word"
         android:singleLine="false"
-        android:text="@string/tutorial_height_1" />
+        android:text="@string/tutorial_height_1"
+        tools:targetApi="o" />
 
     <TextView
         android:id="@+id/height_type_tv"
@@ -23,17 +25,21 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:lineSpacingMultiplier="1.5"
+        android:justificationMode="inter_word"
         android:layout_marginTop="10sp"
         android:layout_marginBottom="10sp"
         android:singleLine="false"
-        android:text="@string/tutorial_manual_height" />
+        android:text="@string/tutorial_manual_height"
+        tools:targetApi="o" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:lineSpacingMultiplier="1.5"
+        android:justificationMode="inter_word"
         android:singleLine="false"
-        android:text="@string/tutorial_height_2" />
+        android:text="@string/tutorial_height_2"
+        tools:targetApi="o" />
 
 </LinearLayout>
