--- a/app/src/main/res/layout/fragment_tutorial_introduction.xml
+++ b/app/src/main/res/layout/fragment_tutorial_introduction.xml
@@ -11,17 +11,21 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:justificationMode="inter_word"
         android:lineSpacingMultiplier="1.5"
         android:singleLine="false"
-        android:text="@string/tutorial_intro_1"/>
+        android:text="@string/tutorial_intro_1"
+        android:textSize="16sp"
+        tools:targetApi="o" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:justificationMode="inter_word"
         android:layout_marginTop="10sp"
         android:textSize="16sp"
-        android:text="@string/tutorial_intro_2"/>
+        android:text="@string/tutorial_intro_2"
+        tools:targetApi="o" />
 
     <Button
         android:id="@+id/introduction_video"
@@ -31,6 +35,6 @@
         android:layout_margin="20sp"
         android:textAlignment="center"
         android:text="@string/example_video"
-        android:drawableStart="@drawable/ic_videocam"/>
+        android:drawableTop="@drawable/ic_videocam"/>
 
 </LinearLayout>
