--- a/app/src/main/res/layout/fragment_tutorial_measure.xml
+++ b/app/src/main/res/layout/fragment_tutorial_measure.xml
@@ -14,8 +14,10 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:lineSpacingMultiplier="1.5"
+        android:justificationMode="inter_word"
         android:singleLine="false"
-        android:text="@string/tutorial_measure_1"/>
+        android:text="@string/tutorial_measure_1"
+        tools:targetApi="o" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,8 +37,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:justificationMode="inter_word"
             android:textSize="16sp"
-            android:text="@string/tutorial_measure_2"/>
+            android:text="@string/tutorial_measure_2"
+            tools:targetApi="o" />
 
     </LinearLayout>
 
@@ -58,8 +62,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:justificationMode="inter_word"
             android:textSize="16sp"
-            android:text="@string/tutorial_measure_3"/>
+            android:text="@string/tutorial_measure_3"
+            tools:targetApi="o" />
 
     </LinearLayout>
 
@@ -81,8 +87,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:justificationMode="inter_word"
             android:textSize="16sp"
-            android:text="@string/tutorial_measure_4"/>
+            android:text="@string/tutorial_measure_4"
+            tools:targetApi="o" />
 
     </LinearLayout>
 
@@ -104,8 +112,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:justificationMode="inter_word"
             android:textSize="16sp"
-            android:text="@string/tutorial_measure_5"/>
+            android:text="@string/tutorial_measure_5"
+            tools:targetApi="o" />
 
     </LinearLayout>
 
@@ -117,6 +127,6 @@
         android:layout_margin="20sp"
         android:textAlignment="center"
         android:text="@string/video_guide"
-        android:drawableStart="@drawable/ic_videocam"/>
+        android:drawableTop="@drawable/ic_videocam"/>
 
 </LinearLayout>
