--- a/app/src/main/res/layout/fragment_tutorial_points.xml
+++ b/app/src/main/res/layout/fragment_tutorial_points.xml
@@ -14,7 +14,9 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:lineSpacingMultiplier="1.5"
+        android:justificationMode="inter_word"
         android:singleLine="false"
-        android:text="@string/tutorial_points"/>
+        android:text="@string/tutorial_points"
+        tools:targetApi="o" />
 
 </LinearLayout>
