--- a/app/src/main/res/layout/fragment_tutorial_pointtypes.xml
+++ b/app/src/main/res/layout/fragment_tutorial_pointtypes.xml
@@ -14,8 +14,10 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:lineSpacingMultiplier="1.5"
+        android:justificationMode="inter_word"
         android:singleLine="false"
-        android:text="@string/tutorial_point_types_1"/>
+        android:text="@string/tutorial_point_types_1"
+        tools:targetApi="o" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -30,7 +32,9 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:lineSpacingMultiplier="1.5"
+        android:justificationMode="inter_word"
         android:singleLine="false"
-        android:text="@string/tutorial_point_types_2"/>
+        android:text="@string/tutorial_point_types_2"
+        tools:targetApi="o" />
 
 </LinearLayout>
