--- a/app/src/main/res/layout/activity_add_area.xml
+++ b/app/src/main/res/layout/activity_add_area.xml
@@ -49,7 +49,7 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="20dp"
         android:layout_weight="2"
