--- a/app/src/main/res/layout/activity_add_point.xml
+++ b/app/src/main/res/layout/activity_add_point.xml
@@ -24,7 +24,7 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
