--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,39 @@
         android:lineSpacingMultiplier="1.5"
         android:text="@string/summary_main"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/example_bt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/example_video"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorPrimary"
+            android:drawableStart="@drawable/ic_videocam"/>
+
+        <Button
+            android:id="@+id/tutorial_bt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/tutorial_video"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorPrimary"
+            android:drawableStart="@drawable/ic_videocam"/>
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/get_started_bt"
         android:layout_width="match_parent"
@@ -36,6 +69,6 @@
         android:textSize="16sp"
         android:padding="26sp"
         android:textColor="@color/white"
-        android:backgroundTint="@color/colorPrimary"/>
+        android:backgroundTint="@color/colorPrimaryDark"/>
 
 </LinearLayout>
